--- a/views/site/index.html
+++ b/views/site/index.html
@@ -1,2 +1,22 @@
 <?php include(ROOT.'/views/layouts/header.html'); ?>
+<section class="middle">
+    <div class="middle-left_panel">
+        <ul>
+            <li>Футболки</li>
+            <li>Шорты</li>
+            <li>Кепки</li>
+            <li>Кросовки</li>
+            <li>Спортивные штаны</li>
+            <li>Носки</li>
+        </ul>
+    </div>
+    <div class="middle-products_list">
+        <div class="product">
+            <img src="" class="img_product">
+            <h3 class="title_product"></h3>
+            <p class="description_product"></p>
+            <span class="cost_product"></span>
+        </div>
+    </div>
+</section>
 <?php include(ROOT.'/views/layouts/footer.html'); ?>
