--- a/template/css/style.css
+++ b/template/css/style.css
@@ -19,3 +19,25 @@
     margin: 0;
     color: #000;
 }
+
+/* Style the links inside the navigation bar */
+.navbar-collapse a {
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.navbar-collapse a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+/* Style the "active" element to highlight the current page */
+.navbar-collapse a.active {
+    background-color: #2196F3;
+    color: white;
+}
