--- a/template/css/style.css
+++ b/template/css/style.css
@@ -22,22 +22,62 @@
 
 /* Style the links inside the navigation bar */
 .navbar-collapse a {
-    display: block;
     color: black;
-    text-align: center;
     padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
 }
 
 /* Change the color of links on hover */
 .navbar-collapse a:hover {
-    background-color: #ddd;
-    color: black;
+    background-color: #ADD8E6;
+    color: #fff;
 }
 
 /* Style the "active" element to highlight the current page */
 .navbar-collapse a.active {
     background-color: #2196F3;
     color: white;
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+    text-decoration: none;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
+}
+
+#main {
+    transition: margin-left .5s;
+    padding: 16px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
