--- a/views/site/index.html
+++ b/views/site/index.html
@@ -1,22 +1,16 @@
 <?php include(ROOT.'/views/layouts/header.html'); ?>
 <section class="middle">
-    <div class="middle-left_panel">
-        <ul>
-            <li>Футболки</li>
-            <li>Шорты</li>
-            <li>Кепки</li>
-            <li>Кросовки</li>
-            <li>Спортивные штаны</li>
-            <li>Носки</li>
-        </ul>
+    <div id="mySidenav" class="sidenav">
+        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+        <a href="#">About</a>
+        <a href="#">Services</a>
+        <a href="#">Clients</a>
+        <a href="#">Contact</a>
     </div>
-    <div class="middle-products_list">
-        <div class="product">
-            <img src="" class="img_product">
-            <h3 class="title_product"></h3>
-            <p class="description_product"></p>
-            <span class="cost_product"></span>
-        </div>
+    <div id="main">
+        <h2>Sidenav Push Example</h2>
+        <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
     </div>
 </section>
 <?php include(ROOT.'/views/layouts/footer.html'); ?>
