--- a/views/site/index.html
+++ b/views/site/index.html
@@ -1,16 +1,15 @@
 <?php include(ROOT.'/views/layouts/header.html'); ?>
 <section class="middle">
-    <div id="mySidenav" class="sidenav">
-        <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
-    </div>
-    <div id="main">
-        <h2>Sidenav Push Example</h2>
-        <p>Click on the element below to open the side navigation menu, and push this content to the right.</p>
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+    <div id="main" class="latest-projects__items">
+        <div class="latest-projects__box">
+            <div class="latest-projects__img">
+                <img src="https://produkty24.com.ua/photos/product/513x395/57209.jpg">
+            </div>
+            <div class="latest-projects__footer">
+                <div class="latest-projects__title">Claritas Etiam Processus</div>
+                <div class="latest-projects__category">Photography, Nature</div>
+            </div>
+        </div>
     </div>
 </section>
 <?php include(ROOT.'/views/layouts/footer.html'); ?>
