--- a/views/layouts/footer.html
+++ b/views/layouts/footer.html
@@ -1,4 +1,4 @@
-<footer id="footer" class="footer fixed-bottom">
+<footer id="footer" class="footer footer-bottom">
     <div class="footer-bottom">
         <div class="container">
             <div class="row">
