--- a/views/site/index.html
+++ b/views/site/index.html
@@ -1,9 +1,9 @@
 <?php include(ROOT.'/views/layouts/header.html'); ?>
 <section class="middle">
-    <div id="main" class="latest-projects__items">
+    <div class="latest-projects__items">
         <div class="latest-projects__box">
             <div class="latest-projects__img">
-                <img src="https://produkty24.com.ua/photos/product/513x395/57209.jpg">
+                <img src="https://produkty24.com.ua/photos/product/513x395/57209.jpg" alt="">
             </div>
             <div class="latest-projects__footer">
                 <div class="latest-projects__title">Claritas Etiam Processus</div>
