--- a/template/css/style.css
+++ b/template/css/style.css
@@ -1,23 +1,26 @@
-nav, body {
-    transition: background-color .5s;
+.search-group {
+    width: 300px!important;
 }
 
 .left_menu {
     font-size: 30px;
     cursor: pointer;
     margin-right: 15px;
+    color: #fff
 }
 
 .footer-bottom {
-    background-color: #ADD8E6;
+    background-image: linear-gradient(to top, #211b19 0%, #4e3427 100%);
     min-height: 30px;
     width: 100%;
 }
+
 .copyright {
     line-height: 30px;
     min-height: 30px;
     padding: 7px 0;
 }
+
 .design {
     line-height: 30px;
     min-height: 30px;
@@ -27,19 +30,19 @@ nav, body {
 
 .row p {
     margin: 0;
-    color: #000;
+    color: #fff;
 }
 
 /* Style the links inside the navigation bar */
 .navbar-collapse a {
-    color: black;
+    color: #fff;
     padding: 14px 16px;
 }
 
 /* Change the color of links on hover */
 .navbar-collapse a:hover {
-    background-color: #ADD8E6;
-    color: #fff;
+    background-color: silver;
+    color: #111;
 }
 
 /* Style the "active" element to highlight the current page */
@@ -55,9 +58,8 @@ nav, body {
     z-index: 1;
     top: 0;
     left: 0;
-    background-color: #111;
+    background-image: linear-gradient(to bottom, #211b19 0%, #4e3427 100%);
     overflow-x: hidden;
-    transition: 0.5s;
     padding-top: 60px;
 }
 
@@ -66,12 +68,10 @@ nav, body {
     font-size: 25px;
     color: #818181;
     display: block;
-    transition: 0.3s;
 }
 
 .sidenav a:hover {
     color: #f1f1f1;
-    text-decoration: none;
 }
 
 .sidenav .closebtn {
@@ -82,18 +82,12 @@ nav, body {
     margin-left: 50px;
 }
 
-#main {
-    transition: margin-left .5s;
-    padding: 16px;
-    display: flex;
-}
-
 .latest-projects__items {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     margin-top: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
 }
 
 .latest-projects__box {
@@ -160,7 +154,6 @@ nav, body {
     left: 19px;
     border: 20px solid transparent;
     border-bottom: 10px solid #fbfaf8;
-    transition: 0.3s;
 }
 
 .latest-projects__title {
@@ -174,6 +167,118 @@ nav, body {
 .latest-projects__category {
     color: #d1d1d1;
     font-size: 14px;
+}
+
+.recent-posts__box {
+    width: 360px;
+    margin-bottom: 30px;
+}
+
+.recent-posts__box:hover {
+    background-color: #362f2d;
+}
+
+.recent-posts__box:hover .recent-posts__day{
+    background-color: #c7b299;
+}
+
+.recent-posts__box:hover .recent-posts__month {
+    background-color: #a48d72;
+}
+
+.recent-posts__box:hover .recent-posts__footer {
+    border-color: #362f2d;
+}
+
+.recent-posts__box:hover .recent-posts__title {
+    color: #c7b299;
+}
+
+.recent-posts__box:hover .recent-posts__description {
+    color: #fff;
+}
+
+.recent-posts__img {
+    overflow: hidden;
+    position: relative;
+}
+
+.recent-posts__img img {
+    margin-top: -1px;
+    margin-left: -1px;
+    display: block;
+    width: 100.5%;
+    height: auto;
+}
+
+.recent-posts__date {
+    top: 18px;
+    left: 18px;
+    position: absolute;
+}
+
+.recent-posts__day {
+    color: #ffffff;
+    font-size: 24px;
+    line-height: 35px;
+    width: 50px;
+    height: 35px;
+    border-radius: 3px 3px 0 0;
+    background-color: #363636;
+}
+
+.recent-posts__month {
+    color: #ffffff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 25px;
+    width: 50px;
+    height: 25px;
+    border-radius: 0 0 3px 3px;
+    background-color: #252525;
+}
+
+.recent-posts__footer {
+    text-align: left;
+    border: 1px solid #f8f8f8;
+    border-top: none;
+    padding: 20px 20px 23px;
+}
+
+.recent-posts__title {
+    color: #555555;
+    font-family: 'Raleway', sans-serif;
+    font-size: 20px;
+    font-weight: 500;
+    margin-bottom: 16px;
+}
+
+.recent-posts__description {
+    font-size: 14px;
+    line-height: 22px;
+    margin-bottom: 24px;
+}
+
+.btn__read-more {
+    color: #c7b299;
+    font-size: 14px;
+    position: relative;
+}
+
+.btn__read-more:after {
+    content: '';
+    position: absolute;
+    margin-top: -4px;
+    margin-left: 9px;
+    top: 50%;
+    left: 100%;
+    border: 5px solid transparent;
+    border-left: 6px solid #c7b299;
+}
+
+.btn__read-more:hover {
+    color: #fff;
 }
 
 
