--- a/template/css/style.css
+++ b/template/css/style.css
@@ -99,14 +99,6 @@
     margin-bottom: 30px;
 }
 
-.latest-projects__box a {
-    opacity: 0;
-}
-
-.latest-projects__box:hover a {
-    opacity: 100;
-}
-
 .latest-projects__box:hover .latest-projects__footer {
     background-color: #362f2d;
 }
@@ -182,12 +174,9 @@
     background-color: #362f2d;
 }
 
-.recent-posts__box:hover .recent-posts__day{
-    background-color: #c7b299;
-}
-
-.recent-posts__box:hover .recent-posts__month {
-    background-color: #a48d72;
+.recent-posts__box:hover .recent-posts__img {
+    opacity: 0.6;
+    background-color: #111;
 }
 
 .recent-posts__box:hover .recent-posts__footer {
@@ -213,34 +202,6 @@
     display: block;
     width: 100.5%;
     height: auto;
-}
-
-.recent-posts__date {
-    top: 18px;
-    left: 18px;
-    position: absolute;
-}
-
-.recent-posts__day {
-    color: #ffffff;
-    font-size: 24px;
-    line-height: 35px;
-    width: 50px;
-    height: 35px;
-    border-radius: 3px 3px 0 0;
-    background-color: #363636;
-}
-
-.recent-posts__month {
-    color: #ffffff;
-    font-family: 'Roboto', sans-serif;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 25px;
-    width: 50px;
-    height: 25px;
-    border-radius: 0 0 3px 3px;
-    background-color: #252525;
 }
 
 .recent-posts__footer {
