--- a/views/layouts/header.html
+++ b/views/layouts/header.html
@@ -25,10 +25,10 @@
                 <a class="nav-link" href="/">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="/products">Products</a>
+                <a class="nav-link" href="/catalog">Catalog</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Contacts</a>
+                <a class="nav-link" href="/contacts">Contacts</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">About us</a>
